fix(css): wrap class and use uppercase

--- a/practice-two/src/style/sections/advantage.css
+++ b/practice-two/src/style/sections/advantage.css
@@ -1,4 +1,4 @@
-.advantages-wrapper {
+.advantages {
   background-color: var(--color-base);
   display: flex;
   flex-direction: column;
@@ -12,10 +12,7 @@
   margin-top: 20px;
 }
 
-.advantages__title {
-  color: var(--color-secondary);
-}
-
+.advantages__title,
 .advantages__header-text {
   color: var(--color-secondary);
 }
@@ -48,6 +45,7 @@
   font-weight: var(--font-weight-primary);
   line-height: var(--line-height-base);
   letter-spacing: var(--letter-spacing-lg);
+  text-transform: uppercase;
 }
 
 .advantages__description-text {
@@ -133,7 +131,7 @@
 }
 
 @media (min-width: 1440px) {
-  .advantages-wrapper {
+  .advantages {
     margin-bottom: 50px;
   }
 
